# memson

./: Cargo.toml  Dockerfile  LICENSE  README.md  package-lock.json  report.xml  tcp-client.js  test.memson
cli/: Cargo.toml
cli/src/: main.rs
db/: Cargo.toml
db/src/: json.rs  lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: db.rs  json.rs  main.rs
www/: Cargo.toml
www/src/: json.rs  main.rs
